force-app/main/default/objects/Campaign/fields/stayclassy__Classy_API_Request__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_API_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The most recent API request that updates this Campaign</description>
    <label>Classy API Request</label>
    <referenceTo>stayclassy__Classy_API_Request__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>