force-app/main/default/objects/Campaign/fields/stayclassy__Classy_Campaign_External_Name__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Campaign_External_Name__c</fullName>
    <description>Public Campaign Name</description>
    <inlineHelpText>Public Campaign Name</inlineHelpText>
    <label>Classy Campaign External Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>