force-app/main/default/objects/Campaign/fields/stayclassy__Classy_campaign_template_id__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_campaign_template_id__c</fullName>
    <label>Classy Campaign Template ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>