force-app/main/default/objects/Campaign/fields/stayclassy__Classy_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Campaign_Type__c</fullName>
    <description>Indicates the level of the Campaign hierarchy for a record, either Campaign (a parent Classy Campaign), Team, or Fundraiser</description>
    <label>Classy Campaign Hierarchy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Fundraiser</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>