force-app/main/default/objects/Campaign/fields/stayclassy__Classy_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Member_ID__c</fullName>
    <label>Classy Member ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>