force-app/main/default/objects/Campaign/fields/stayclassy__Classy_Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Organization_ID__c</fullName>
    <description>The external Classy Organization ID</description>
    <label>Classy Organization ID</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>