force-app/main/default/objects/Campaign/fields/stayclassy__Classy_Parent_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Parent_Campaign_ID__c</fullName>
    <label>Classy Parent Campaign ID</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>