force-app/main/default/objects/Campaign/fields/stayclassy__End_Date__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__End_Date__c</fullName>
    <label>Classy End Date</label>
    <type>DateTime</type>
</CustomField>