force-app/main/default/objects/Campaign/fields/stayclassy__sf_designation_id__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__sf_designation_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Classy Designation for this Campaign, Fundraiser, or Team</description>
    <label>Classy Designations</label>
    <referenceTo>stayclassy__sc_designation__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>