force-app/main/default/objects/Campaign/fields/stayclassy__sf_event_id__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__sf_event_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for the Classy Campaign record related to this Campaign</description>
    <label>Classy Campaign - DEPRECATED</label>
    <referenceTo>stayclassy__sc_event__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>