force-app/main/default/objects/Campaign/fields/stayclassy__total_raised__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__total_raised__c</fullName>
    <label>Total Raised - DEPRECATED</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>