force-app/main/default/objects/Campaign/fields/X2013_Partner_Application_Accepted__c.field-meta.xml
<CustomField>
    <fullName>X2013_Partner_Application_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>has the partner been accepted into one of our partner programs</description>
    <label>2013 Partner Application Accepted</label>
    <type>Checkbox</type>
</CustomField>