force-app/main/default/objects/Campaign/listViews/DB_Manual_to_Prospects.listView-meta.xml
<ListView>
    <fullName>DB_Manual_to_Prospects</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>DB Manual to Prospects email</label>
</ListView>