force-app/main/default/objects/Campaign/listViews/stayclassy__Classy_Fundraisers.listView-meta.xml
<ListView>
    <fullName>stayclassy__Classy_Fundraisers</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>stayclassy__sf_contact_id__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.EXP_REVENUE</columns>
    <columns>CAMPAIGN.TOT_WON_OPPORTUNITIES</columns>
    <columns>TOT_AMOUNT_WON</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Fundraiser</value>
    </filters>
    <label>Classy Fundraisers</label>
</ListView>