force-app/main/default/objects/Campaign/listViews/stayclassy__Classy_Parent_Campaigns.listView-meta.xml
<ListView>
    <fullName>stayclassy__Classy_Parent_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>stayclassy__sc_event_id__c</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <columns>AMOUNT_WON</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>stayclassy__sc_event_id__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>stayclassy__Classy_Campaign_Type__c</field>
        <operation>equals</operation>
        <value>Campaign</value>
    </filters>
    <label>Classy Parent Campaigns</label>
</ListView>