force-app/main/default/objects/Campaign/listViews/stayclassy__Classy_Teams.listView-meta.xml
<ListView>
    <fullName>stayclassy__Classy_Teams</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>stayclassy__sf_contact_id__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>TOT_AMOUNT_WON</columns>
    <columns>CAMPAIGN.EXP_REVENUE</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>stayclassy__sc_event_id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Team</value>
    </filters>
    <label>Classy Teams</label>
</ListView>