force-app/main/default/objects/Campaign/listViews/stayclassy__StayClassy_Campaigns.listView-meta.xml
<ListView>
    <fullName>stayclassy__StayClassy_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>stayclassy__sc_event_id__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.EXP_REVENUE</columns>
    <columns>AMOUNT_WON</columns>
    <columns>stayclassy__percent_goal_reached__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>stayclassy__campaign_url__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>stayclassy__sc_event_id__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All Classy Campaigns</label>
</ListView>